:memo: :: 코드 가독성 향상, final 추가, 누락된 annotation 추가, :fire: :: 필요없는 코드 삭제